--- a/styles/style.css
+++ b/styles/style.css
@@ -2,24 +2,75 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 
 /* all-styles */
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: "Poppins", sans-serif;
 }
 .white-texts {
-  color: white;
+  color: #ffffff;
 }
-/* ----- Banner Part------- --------------------------*/
+
+/* ----- Banner Part----*/
+
 .banner {
   display: flex;
-  background-color:#161616;
+  background-color: #161616;
+  border-radius: 30px;
+  background-size: 100%;
+  height: 80vh;
+  width: 90%;
+  margin-left: 5%;
+  margin-top: 5%;
+  align-items: center;
+  justify-content: space-around;
 }
 .heading {
+  width: 531px;
+  height: 424px;
+  padding-left: 100px;
 }
-.headline {
+.heading .headline {
+  font-size: 60px;
+  font-weight: 600;
+  letter-spacing: 3px;
 }
-.watch-button {
+.heading .headline {
+  margin-bottom: 10px;
+  font-size: 60px;
+  font-weight: 600;
+  letter-spacing: 3px;
+}
+.heading p {
+  margin-bottom: 40px;
+  font-size: 14px;
+  letter-spacing: 3px;
+}
+.heading .btn {
+  text-decoration: none;
+  background-color: #dd0000;
+  font-size: 18px;
+  font-weight: 600;
+  padding: 15px 40px;
+  border-radius: 7px;
+}
+.heading .btn:hover {
+  text-decoration: none;
+  color: #dd0000;
+  background-color: #ffffff;
+  font-size: 18px;
+  font-weight: 600;
+  padding: 15px 40px;
+  border-radius: 7px;
 }
 .banner-image {
+  margin: 0;
+  padding: 0;
 }
-.banner-image img {
+.banner .banner-image img {
+  height: 613px;
+  width: 581px;
 }
