--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ body {
   margin-left: 5%;
   margin-top: 5%;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 .heading {
   width: 531px;
@@ -34,18 +34,17 @@ body {
   padding-left: 100px;
 }
 .heading .headline {
-  font-size: 60px;
-  font-weight: 600;
-  letter-spacing: 3px;
-}
-.heading .headline {
-  margin-bottom: 10px;
+  width: 531px;
+  height: 240px;
+  margin-bottom: 30px;
   font-size: 60px;
   font-weight: 600;
   letter-spacing: 3px;
 }
 .heading p {
-  margin-bottom: 40px;
+  width: 506px;
+  height: 78px;
+  margin-bottom: 50px;
   font-size: 14px;
   letter-spacing: 3px;
 }
@@ -67,14 +66,14 @@ body {
   font-weight: 600;
   padding: 15px 40px;
   border-radius: 7px;
+  transition: color 1.5s, background-color 1.5s;
 }
-.banner-image {
+
+.banner .banner-image img {
+  height: 635px;
+  width: 581px;
   margin: 0;
   padding: 0;
-}
-.banner .banner-image img {
-  height: 613px;
-  width: 581px;
 }
 /* --------------------------------
   -------------body-section--------
@@ -139,11 +138,13 @@ body {
 .blogs .blog-info span {
   color: gray;
 }
-.blogs .blog-info button,span,p {
+.blogs .blog-info button,
+span,
+p {
   margin: 15px;
 }
 /* -- Button for tablet mode only -- */
-.blogs a{
+.blogs a {
   display: none;
   margin-left: 50px;
   text-decoration: none;
@@ -161,7 +162,7 @@ body {
 footer {
   margin-top: 100px;
   width: 100%;
-  height: 30vh;
+  height: 35vh;
   background-color: #161616;
 }
 .footer {
@@ -172,13 +173,28 @@ footer {
 .footer h2 {
   padding: 30px;
   color: #ffffff;
-  font-size: 25px;
+  font-size: 30px;
 }
 .footer .links a {
   text-decoration: none;
   color: lightgray;
 }
 
+.links {
+  font-size: 13px;
+  font-weight: 400;
+  margin: 35px;
+  display: grid;
+  grid-auto-flow: column;
+  grid-column-gap: 8px;
+}
+.footer .links a{
+  transition: color 0.5s, background-color 0.5s;
+}
+.footer .links a:hover{
+  transform: scale(1.4);
+  color: orange;
+}
 .footer .social a {
   text-decoration: none;
   color: aquamarine;
@@ -186,14 +202,4 @@ footer {
 }
 .footer .social {
   font-size: 18px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.links {
-  font-size: 13px;
-  font-weight: 400;
-  margin-top: 15px;
-  display: grid;
-  grid-auto-flow: column;
-  grid-column-gap: 8px;
 }
