--- a/assets/match.css
+++ b/assets/match.css
@@ -6,7 +6,7 @@
 
 
 
-/*-----General Section Style Start----------*/
+/*-----Gneral Section Style Start----------*/
 * {
     margin: 0;
     padding: 0;
@@ -14,6 +14,8 @@
     text-decoration: none;
     list-style: none;
 }
+
+/*-----Gneral  Section Style End----------*/
 
 /*-----goal Section  Style Start----------*/
 
@@ -28,6 +30,8 @@
     margin: 50px;
     padding: 50px;
 }
+
+
 
 .goal-text h1 {
     width: 531px;
@@ -67,16 +71,14 @@
     text-align: center;
     color: #FFFFFF;
     padding: 12px 22px;
-    transition: color 1.5s, background-color 2s;
+    transition: color 2s, background-color 2s;
 }
 
 .goal-text a:hover {
-    background-color: rgb(255, 255, 255);
-    color: rgb(191, 237, 99);
+    background-color: lightsalmon;
+    color: saddlebrown;
 }
-.goal-img{
-    height: 100%;
-}
+
 
 /*-----goal Section  Style End----------*/
 
@@ -119,12 +121,12 @@
     border: 2px solid black;
 }
 
-.button-3 {
+.button-1 {
     background-color: #DD0000;
     border: none;
 }
 
-.button-3 a {
+.button-1 a {
     color: #FFFFFF;
 }
 
@@ -143,76 +145,68 @@
 
 .card {
     width: 312px;
-    height: 362px;
+    height: 242px;
     border: 1px solid #E8E8E8;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
 }
 
 .card-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     margin-bottom: 20px;
+}
+
+.card-img span {
+    width: 22px;
+    height: 24px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    color: #161616;
+    margin: 0 20px;
 }
 
 .card-text {
     display: flex;
     flex-direction: column;
-    padding-left: 15px;
-}
-
-.transfer {
-    width: 100px;
-    height: 32px;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    color: #161616;
-    border: 1px solid #161616;
-    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    padding: 2px;
 }
 
-
-.description {
-    width: 272px;
-    height: 54px;
+.card-text h3 {
+    width: 220px;
+    height: 30px;
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 600;
-    font-size: 18px;
-    line-height: 27px;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
     color: #161616;
-    margin: 20px 0;
+    margin-bottom: 10px;
 }
 
-.card-info {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.comment {
-    margin-left: 30px;
-}
-
-.color {
-    color: rgba(22, 22, 22, 0.7);
-}
-
-.number {
+.card-text p {
+    width: 166px;
+    height: 20px;
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    line-height: 26px;
-    color: rgba(22, 22, 22, 0.7);
+    line-height: 20px;
+    text-align: center;
+    color: #4D4D4D;
 }
-
 
 .view-more {
     display: flex;
@@ -294,7 +288,7 @@ footer {
 
 .social-link a {
     font-size: 25px;
-    color: aqua;
+    color: violet;
     margin-left: 25px;
     transition: transform 250ms, opacity 400ms;
 }
@@ -302,7 +296,7 @@ footer {
 .link a:hover,
 .social-link a:hover {
     transform: scale(1.2);
-    color: rgb(255, 0, 0);
+    color: tomato;
 }
 
 
