--- a/styles/style.css
+++ b/styles/style.css
@@ -72,14 +72,11 @@
 
 .goal-text a:hover {
     background-color: rgb(255, 255, 255);
-    color: rgb(191, 237, 99);
+    color: rgb(255, 0, 0);
 }
-.goal-img  img {
-  height: auto;
-  margin-bottom: 0;
-  padding-bottom: 0;
+.goal-img img{
+    height: 76vh;
 }
-
 /*-----goal Section  Style End----------*/
 
 /*-----Button & Layout Section Style Start----------*/
